# franklin-container

./: pyproject.toml  requirements.txt
.github/workflows/: conda-release.yml  pypi-release.yml
conda-build/: meta.yaml
docs/: _quarto.yml  objects.txt
docs/_freeze/pages/getting_started/execute-results/: html.json
docs/api/: _sidebar.yml  index.qmd  load_ipython_extension.qmd
docs/pages/: getting_started.qmd
src/franklin_container/: __init__.py  magic.py
