[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin_container"
version = "0.1.4"
description = "A custom Jupyter magic for installing Pixi packages"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "jupyterlab>=4",
    "ipython",
    "pyperclip"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/yourusername/franklin_container"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."ipython_magic"]
franklin = "franklin_container.magic:load_ipython_extension"
